--- a/less/button-groups.less
+++ b/less/button-groups.less
@@ -147,11 +147,11 @@
   .input-group-btn { //KU
     .btn {
       &:hover {
-        background-color: @white;
+        background-color: @white-color;
         text-decoration: @link-hover-decoration;
       }
       &:focus, &:active {
-        background-color: @white;
+        background-color: @white-color;
       }
     }
   }
