--- a/less/ku-gridboxes.less
+++ b/less/ku-gridboxes.less
@@ -19,7 +19,7 @@
 @blue: #a1c5c8;
 @green: @samf-sub_2;
 @ku-gray: #f2f2f0;
-@white: #fff;
+//@white: @white-color;
 
 // Faculty sub colors (Faculty colors are located in variables.less)
 //Science
@@ -102,14 +102,14 @@
       &.text-down {
         .box1 .header {
           .backgroundColorFix(@blue, .75);
-          color: @white;
+          color: @white-color;
         }
       }
 
       &.text-top {
         .box1 .header {
           background: @blue;
-          color: @white;
+          color: @white-color;
         }
       }
 
@@ -139,7 +139,7 @@
       &.text-top {
         .box1 .header {
           background: @brown;
-          color: @white;
+          color: @white-color;
         }
       }
 
@@ -162,14 +162,14 @@
       &.text-down {
         .box1 .header {
           .backgroundColorFix(@green, .75);
-          color: @white;
+          color: @white-color;
         }
       }
 
       &.text-top {
         .box1 .header {
           background: @green;
-          color: @white;
+          color: @white-color;
         }
       }
 
