--- a/less/KU-misc.less
+++ b/less/KU-misc.less
@@ -5,9 +5,10 @@
 // KU adding margins to rows and columns
 
 .main-content {
-  // .row:not(:last-child) {
-  //   margin-bottom: @margin20;
-  // }
+  @media (max-width: @screen-sm-min) {
+    width: 100%; // Overriding Bootstrap's grid system
+  }
+
   .row {
     > [class*="col-"] {
       &:not(.form-group) {
@@ -21,7 +22,6 @@
   }
 }
 // Main content part
-
 main {
   flex: 1 0 auto;
   background-color: @white-color;
@@ -56,8 +56,11 @@ nav {
   }
   flex-grow: 1;
 }
+
 .right-side {
+  @media (min-width: @screen-md-min) {
     .pull-right();
+  }
 }
 
 .main-area {
@@ -94,7 +97,6 @@ nav {
 .relative {
   position: relative;
 }
-
 /*
  * Let's target IE to respect aspect ratios and sizes for img tags containing SVG files - Thanks IE! :-/
  *
