--- a/less/ku-datatables.less
+++ b/less/ku-datatables.less
@@ -82,6 +82,9 @@
     white-space: nowrap;
   }
 }
+.dataTables_wrapper > .row > [class*=col-] {
+    margin-bottom: 0!important;
+}
 
 .dataTables_wrapper {
   .dataTables_length {
