--- a/less/ku-footer.less
+++ b/less/ku-footer.less
@@ -12,7 +12,7 @@
 
   .footer-data {
     text-align: right;
-    @media (max-width: @screen-xs-min) {
+    @media (max-width: @screen-xs-max) {
       text-align: left;
     }
   }
