--- a/less/ku-mobile-menu.less
+++ b/less/ku-mobile-menu.less
@@ -41,7 +41,7 @@
     border-bottom: 1px solid lighten(@teol, 7%);
   }
 }
-@media (max-width: @screen-sm-min) {
+@media (max-width: @screen-sm-max) {
   // Hide KU language switcher icons
   &.dk,
   &.eng {
