--- a/less/ku-footer.less
+++ b/less/ku-footer.less
@@ -258,7 +258,7 @@
     }
   }
 }
-@media (max-width: @screen-sm-min) {
+@media (max-width: @screen-xs-max) {
   .globalfooter {
     .container {
       padding-right: 0;
