--- a/less/ku-leftmenu.less
+++ b/less/ku-leftmenu.less
@@ -240,7 +240,7 @@
     }
   }
 }
-@media (min-width: @screen-sm-min) and (max-width: @screen-md-max) {
+@media (min-width: @screen-sm-min) and (max-width: @screen-md-min) {
   .ku-leftmenu {
     // Larger font for tablets
     ul.nav {
@@ -269,7 +269,7 @@
   }
 }
 // Left menu slide in/out for mobiles
-@media (max-width: @screen-sm-min) {
+@media (max-width: @screen-xs-max) {
   .ku-leftmenu {
     display: none;
   }
