--- a/less/KU-misc.less
+++ b/less/KU-misc.less
@@ -5,7 +5,7 @@
 // KU adding margins to rows and columns
 
 .main-content {
-  @media (max-width: @screen-sm-min) {
+  @media (max-width: @screen-xs-max) {
     width: 100%; // Overriding Bootstrap's grid system
   }
 
@@ -22,7 +22,7 @@
   }
 }
 .right-side {
-  @media (min-width: @screen-sm-min) and (max-width: @screen-md-min) {
+  @media (min-width: @screen-xs-max) and (max-width: @screen-md-min) {
     .pull-right();
   }
 }
