--- a/docs/_includes/customizer-variables.html
+++ b/docs/_includes/customizer-variables.html
@@ -321,11 +321,11 @@
   <div class="clearfix"></div>
   <div class="col-xs-4">
     <label for="input-@line-height-large">@line-height-large</label>
-    <input class="form-control" id="input-@line-height-large" type="text" value="1.3333333" data-var="@line-height-large"/>
+    <input class="form-control" id="input-@line-height-large" type="text" value="1.5" data-var="@line-height-large"/>
   </div>
   <div class="col-xs-4">
     <label for="input-@line-height-small">@line-height-small</label>
-    <input class="form-control" id="input-@line-height-small" type="text" value="1.5" data-var="@line-height-small"/>
+    <input class="form-control" id="input-@line-height-small" type="text" value="1.3333333" data-var="@line-height-small"/>
   </div>
   <div class="col-xs-4">
     <label for="input-@border-radius-base">@border-radius-base</label>
