--- a/less/variables.less
+++ b/less/variables.less
@@ -88,7 +88,7 @@
 //** Unit-less `line-height` for use in components like buttons.
 @line-height-base:        1.333333; // 16/12
 //** Computed "line-height" (`font-size` * `line-height`) for use with `margin`, `padding`, etc.
-@line-height-computed:    floor((@font-size-base * @line-height-base)); // ~20px
+@line-height-computed:    floor((@font-size-base * @line-height-base)); // ~16px
 
 //** By default, this inherits from the `<body>`.
 @headings-font-family:    inherit;
@@ -137,8 +137,8 @@
 @padding-xs-vertical:       1px;
 @padding-xs-horizontal:     5px;
 
-@line-height-large:         1.3333333; // extra decimals for Win 8.1 Chrome
-@line-height-small:         1.5;
+@line-height-large:         1.5;
+@line-height-small:         1.3333333; // extra decimals for Win 8.1 Chrome
 
 @border-radius-base:        2px;
 @border-radius-large:       6px;
