--- a/less/ku-footer.less
+++ b/less/ku-footer.less
@@ -250,6 +250,9 @@
             background-color: #d12223;
           }
         }
+        &:active, &:focus {
+            background-color: inherit;
+        }
       }
     }
 
