--- a/less/navbar.less
+++ b/less/navbar.less
@@ -618,6 +618,7 @@
           height: 13px;
           width: 19px;
           display: inline-block;
+          margin-left: 2px;
         }
       }
 
