--- a/docs/_includes/global-footer.html
+++ b/docs/_includes/global-footer.html
@@ -166,7 +166,7 @@
         setSelected: true
       }
     });
-    $("#ocalmenu > li").addClass("mm-opened");
+    $("#localmenu > li").addClass("mm-opened");
     $("#leftmenu_2 > li").addClass("mm-opened");
   });
 </script>
