--- a/less/ku-footer.less
+++ b/less/ku-footer.less
@@ -250,8 +250,8 @@
             background-color: #d12223;
           }
         }
-        &:active, &:focus {
-            background-color: inherit;
+        &:active {
+            background-color: #757575;
         }
       }
     }
