--- a/less/ku-gridboxes.less
+++ b/less/ku-gridboxes.less
@@ -1311,7 +1311,7 @@
     .header {
       color: inherit;
       font-size: 1.2em;
-      padding: 8px 25px 8px @padding10;
+      padding: 8px 25px 6px @padding10;
       width: 100%;
       text-transform: uppercase;
       letter-spacing: 0.8px;
@@ -1390,7 +1390,7 @@
     font-family: 'arrow';
     content: '\0043';
     color: @white-color;
-    bottom: @margin10;
+    bottom: 8px;
     right: @margin10;
     position: absolute;
     z-index: 5;
@@ -2145,6 +2145,7 @@
           overflow: hidden;
           text-overflow: ellipsis;
           white-space: nowrap;
+          padding: 8px 25px 8px 10px;
         }
       }
     }
