--- a/less/ku-datetimepicker.less
+++ b/less/ku-datetimepicker.less
@@ -153,6 +153,7 @@
         cursor: pointer;
       }
     }
+
     &.old {
       &:hover {
         span {
@@ -268,6 +269,15 @@
           color: #fff;
           background-color: @datepicker-active-date-bg-hover;
           cursor: pointer;
+        }
+
+        a {
+          color: inherit;
+          display: block;
+
+          &:hover {
+            text-decoration: none;
+          }
         }
       }
     }
