--- a/docs/_includes/global-footer.html
+++ b/docs/_includes/global-footer.html
@@ -158,6 +158,9 @@
       },
       extensions: ['multiline', 'pagedim-black'],
       slidingSubmenus: false,
+      currentItem: {
+                find: true,
+            },
       setSelected: {
         parent: true,
         current: 'detect'
