--- a/less/variables.less
+++ b/less/variables.less
@@ -19,12 +19,19 @@
 // KU specific colors
 
 @ku-red:                #901a1e;
+@ku-red-hover:          #7b161a;
 @hum:                   #365aa5;
+@hum-hover:             #304f91;
 @science:               #46743c;
+@science-hover:         #395e31;
 @sund:                  #2a216a;
+@sund-hover:            #1b1545;
 @samf:                  #e13718;
+@samf-hover:            #cc3216;
 @jura:                  #999632;
+@jura-hover:            #85822c;
 @teol:                  #66609e;
+@teol-hover:            #565185;
 
 @brand-primary:         darken(#428bca, 6.5%); // #337ab7
 @brand-success:         #5cb85c;
