--- a/less/ku-footer.less
+++ b/less/ku-footer.less
@@ -336,10 +336,10 @@
             color: @white-color;
             font-size: 13px;
             position: absolute;
-            top: 37%;
+            top: 50%;
             right: 15px;
             left: auto;
-            transform: rotate(0deg) translate3d(0, 0, 0);
+            transform: rotate(0deg) translate3d(0, 0, 0) translateY(-50%);
             transition: transform 0.4s ease-in-out;
           }
 
