--- a/less/ku-mobile-menu.less
+++ b/less/ku-mobile-menu.less
@@ -121,32 +121,32 @@
         border-color: @white-color;
       }
     }
-
+// 1px solid
     li {
-      border-bottom: 1px solid lighten(@ku-red, 7%);
+      border-bottom: lighten(@ku-red, 7%);
 
       .theme-samf & {
-        border-bottom: 1px solid lighten(@samf, 7%);
+        border-bottom: lighten(@samf, 7%);
       }
 
       .theme-hum & {
-        border-bottom: 1px solid lighten(@hum, 7%);
+        border-bottom: lighten(@hum, 7%);
       }
 
       .theme-science & {
-        border-bottom: 1px solid lighten(@science, 7%);
+        border-bottom: lighten(@science, 7%);
       }
 
       .theme-sund & {
-        border-bottom: 1px solid lighten(@sund, 7%);
+        border-bottom: lighten(@sund, 7%);
       }
 
       .theme-jura & {
-        border-bottom: 1px solid lighten(@jura, 7%);
+        border-bottom: lighten(@jura, 7%);
       }
 
       .theme-teol & {
-        border-bottom: 1px solid lighten(@teol, 7%);
+        border-bottom: lighten(@teol, 7%);
       }
     }
   }
