--- a/less/ku-footer.less
+++ b/less/ku-footer.less
@@ -92,6 +92,7 @@
         }
 
         &[data-heading='open'] {
+          margin-top: 20px;
           margin-bottom: 3px;
         }
       }
@@ -250,8 +251,9 @@
             background-color: #d12223;
           }
         }
-        &:active {
-            background-color: #757575;
+
+        &:active, &:focus {
+          background-color: #757575;
         }
       }
     }
