--- a/less/ku-mobile-menu.less
+++ b/less/ku-mobile-menu.less
@@ -1114,31 +1114,33 @@ html.mm-pagedim-black.mm-opening {
 
 
 
-#mobileleftmenu > div > div,
-#mobileleftmenu > div > div > ul > ul > li > div {
-	padding-left: 0;
-	padding-top: 0;
-	padding-bottom: 0;
+#mobileleftmenu a {
+	border: transparent;
 }
 
-#mobileleftmenu > div > div > ul > ul > li {
-	padding-left: 20px;
-}
-#mobileleftmenu > div > div > ul > li {
-	padding-left: 40px;
-}
+	#mobileleftmenu > div > div,
+	#mobileleftmenu > div > div > ul > ul > li > div {
+		padding-left: 0;
+		padding-top: 0;
+		padding-bottom: 0;
+	}
+
+	#mobileleftmenu > div > div > ul > ul > li,
+	#mobileleftmenu > div > div > ul > li {
+		padding-left: 20px;
+	}
 
 
-#mobileleftmenu > div > div > ul > ul > li > div > ul  li {
-	border-bottom: #BFBFBF !important;
-	margin-left: -20px;
-}
+	#mobileleftmenu > div > div > ul > ul > li > div > ul  li {
+		border-bottom: #BFBFBF !important;
+		margin-left: -20px;
+	}
 
-#mobileleftmenu > div > div > ul > ul > li > div > ul  li a {
-	padding-left: 40px;
-}
+	#mobileleftmenu > div > div > ul > ul > li > div > ul  li a {
+		padding-left: 40px;
+	}
 
 
-#mobileleftmenu > div > div > ul > ul > li > div > ul  li:last-child {
-	border-bottom: none !important;
-}
+	#mobileleftmenu > div > div > ul > ul > li > div > ul  li:last-child {
+		border-bottom: none !important;
+	}
