--- a/less/navbar.less
+++ b/less/navbar.less
@@ -780,7 +780,7 @@
       top: 8px;
     }
     @media (min-width: @screen-sm) {
-      left: 20px;
+      left: @grid-gutter-width;
       width: 30%;
       top: 10px;
     }
