--- a/less/KU-misc.less
+++ b/less/KU-misc.less
@@ -115,7 +115,26 @@ nav {
   }
 }
 
-
+// KU special file upload button
+.btn-file {
+    position: relative;
+    overflow: hidden;
+}
+.btn-file input[type=file] {
+    position: absolute;
+    top: 0;
+    right: 0;
+    min-width: 100%;
+    min-height: 100%;
+    font-size: 100px;
+    text-align: right;
+    filter: alpha(opacity=0);
+    opacity: 0;
+    outline: none;
+    background: @white-color;
+    cursor: inherit;
+    display: block;
+}
 
 .news-teaser {
 	display: table-cell;
