fixing lines between links

--- a/less/ku-mobile-menu.less
+++ b/less/ku-mobile-menu.less
@@ -1115,7 +1115,8 @@ html.mm-pagedim-black.mm-opening {
 
 
 #mobileleftmenu a {
-	border: transparent;
+	border-left: transparent;
+	border-right: transparent;
 }
 
 	#mobileleftmenu > div > div,
