--- a/docs/_layouts/examples.html
+++ b/docs/_layouts/examples.html
@@ -5,7 +5,13 @@
     {% include header.html %}
   </head>
   <body>
-    <a id="skippy" class="sr-only sr-only-focusable" href="#main-area"><div class="container"><span class="skiplink-text">Skip to main content</span></div></a>
+      <!-- <nav class="jump" role="navigation" aria-label="Spring til indhold på Siden" title="Spring til Indhold på Siden">
+          <ul class="jump">
+              <li><a href="#topbar_menu" title="Spring til sidens topmenu" accesskey="2" class="btn btn-small btn-gray"><span class="glyphicon glyphicon-menu-hamburger"> Emnenavigation</span></a></li>
+              <li><a href="#searchbar" title="Spring til Søgning" accesskey="1" class="btn btn-small btn-gray"><span class="glyphicon glyphicon-search"> Søgning</span></a></li>
+              <li><a href="#content" title="Spring til Indhold på Siden" accesskey="3" class="btn btn-small btn-gray"><span class="glyphicon glyphicon-list"> Indhold</span></a></li>
+          </ul>
+      </nav> -->
     <!-- Ku top navigation -->
     {% include nav/ku-nav.html %}
 
