--- a/docs/_includes/global-footer.html
+++ b/docs/_includes/global-footer.html
@@ -1,7 +1,7 @@
 <!-- Left Navigation on SMALL screens (mmenu) -->
 <nav id="mobileleftmenu"></nav>
 <!-- Footer -->
-<footer>
+<footer id="footer">
   <div class="container-fluid globalfooter">
     <div class="container">
       <div class="row footercontent" role="menubar">
