--- a/docs/_includes/nav/ku-nav.html
+++ b/docs/_includes/nav/ku-nav.html
@@ -18,7 +18,7 @@
           <li><a href="#">Job</a></li>
           <li><a href="#">A-Å-index</a></li>
           <li><a href="#">KUnet</a></li>
-          <li><a class="eng" href="#">English <span></span></a></li>
+          <li><a class="eng" href="#">English</a></li>
         </ul>
       </div>
     </div>
@@ -79,8 +79,8 @@
       </ul>
       <form class="navbar-form navbar-right" role="search">
         <div class="input-group">
-          <input class="form-control" placeholder="Søg..." aria-label="Inputfelt til søgeord">
-          <div class="input-group-btn">
+          <input class="form-control" id="searchinput" placeholder="Søg..." aria-label="Inputfelt til søgeord">
+          <div class="input-group-btn btn-global-search">
             <button type="button" id="search" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Hele KU <span class="caret"></span> <span class="sr-only">Vis søgemuligheder</span> </button>
             <ul class="dropdown-menu dropdown-menu-right">
               <li><a href="#">Hele KU</a></li>
