--- a/docs/_layouts/examples.html
+++ b/docs/_layouts/examples.html
@@ -1,23 +1,36 @@
 <!DOCTYPE html>
 <html lang="da">
   <head>
-    <!-- Meta, title, CSS, favicons, etc. -->
     {% include header.html %}
   </head>
   <body>
-      <!-- <nav class="jump" role="navigation" aria-label="Spring til indhold på Siden" title="Spring til Indhold på Siden">
+      <nav class="jumpbox" aria-label="Spring til indhold på Siden" title="Spring til Indhold på Siden">
           <ul class="jump">
-              <li><a href="#topbar_menu" title="Spring til sidens topmenu" accesskey="2" class="btn btn-small btn-gray"><span class="glyphicon glyphicon-menu-hamburger"> Emnenavigation</span></a></li>
-              <li><a href="#searchbar" title="Spring til Søgning" accesskey="1" class="btn btn-small btn-gray"><span class="glyphicon glyphicon-search"> Søgning</span></a></li>
-              <li><a href="#content" title="Spring til Indhold på Siden" accesskey="3" class="btn btn-small btn-gray"><span class="glyphicon glyphicon-list"> Indhold</span></a></li>
+              <li>
+                  <a href="#navbar" title="Spring til sidens globalmenu" accesskey="1" class="btn btn-small btn-gray"><i class="glyphicon glyphicon-menu-hamburger"></i>
+                  <span>Emnenavigation</span>
+                  </a>
+              </li>
+              <li>
+                  <a href="#searchinput" title="Spring til Søgning" accesskey="2" class="btn btn-small btn-gray"><i class="glyphicon glyphicon-search"></i>
+                      <span>Søgning</span>
+                  </a>
+              </li>
+              <li>
+                  <a href="#content" title="Spring til Indhold på Siden" accesskey="3" class="btn btn-small btn-gray"><i class="glyphicon glyphicon-list"></i>
+                      <span>Indhold</span>
+                  </a>
+              </li>
+              <li>
+                  <a href="#footer" title="Spring til footerlinks" accesskey="4" class="btn btn-small btn-gray"><i class="glyphicon glyphicon-list"></i>
+                  <span>Footerbunks</span>
+              </a>
+              </li>
           </ul>
-      </nav> -->
+      </nav>
     <!-- Ku top navigation -->
     {% include nav/ku-nav.html %}
-
-    <!-- Page content of course! -->
     {{ content }}
-
     {% include global-footer.html %}
   </body>
 </html>
