--- a/less/ku-gridboxes.less
+++ b/less/ku-gridboxes.less
@@ -1,3 +1,4 @@
+
 //
 // KU custom grid box styling
 // --------------------------------------------------
@@ -2178,9 +2179,20 @@
       img, iframe {
         // center media inside the box
         position: absolute;
-        left: 75%;
-        top: 50%;
-        transform: translate(-50%, -50%)
+        left: 50%;
+        transform: translate(-50%, -50%);
+        top: 70%;
+
+        @media (min-width: @screen-xs) and (max-width: @screen-xs-max) {
+            top: 48%;
+        }
+        @media (min-width: @screen-sm) and (max-width: @screen-sm-max) {
+            top: 50%;
+        }
+
+        @media (min-width: @screen-md) {
+            top: 55%; //desktop
+        }
       }
     }
   }
