--- a/less/ku-leftmenu.less
+++ b/less/ku-leftmenu.less
@@ -281,8 +281,8 @@
     top: 0;
     left: 0;
     z-index: 1040;
-    &:focus {
-        background-color: @gray-light;
+    &:active {
+        background-color: @gray-darker;
     }
   }
 
