--- a/docs/_includes/global-footer.html
+++ b/docs/_includes/global-footer.html
@@ -152,7 +152,7 @@
     $mobimenu.find('ul').removeClass('dropdown-menu');
       $mobimenu.mmenu({
         offCanvas: {
-          position: 'left',
+          position: 'right',
           zposition: 'front',
           screenReader: true,
         },
