--- a/less/ku-leftmenu.less
+++ b/less/ku-leftmenu.less
@@ -279,9 +279,9 @@
     background-color: @gray-light;
     position: fixed;
     top: 0;
-    left: 0;
+    right: 8px;
     z-index: 1040;
-    
+
     &:active {
         background-color: @gray-darker;
     }
