--- a/less/navbar.less
+++ b/less/navbar.less
@@ -259,7 +259,7 @@
   background-color: transparent;
   background-image: none; // Reset unusual Firefox-on-Android default style; see https://github.com/necolas/normalize.css/issues/214
   border: 1px solid @white-color;
-  border-radius: @border-radius-base;
+  // border-radius: @border-radius-base;
   // We remove the `outline` here, but later compensate by attaching `:hover`
   // styles to `:focus`.
   &:focus {
