--- a/less/ku-leftmenu.less
+++ b/less/ku-leftmenu.less
@@ -128,6 +128,11 @@
             font-family: 'Glyphicons Halflings';
             font-size: 7px;
             color: @ku-red;
+            padding-top: 1px;
+            padding-right: 1px;
+            position: absolute;
+            left: 0;
+            top: 5px;
 
             .theme-samf & {
               color: @samf;
@@ -275,7 +280,7 @@
   }
 
   .leftmenu-toggle {
-    padding: 8px 10px 5px;
+    padding: 7px 10px;
     background-color: @gray-light;
     position: fixed;
     top: 0;
