--- a/less/ku-mobile-menu.less
+++ b/less/ku-mobile-menu.less
@@ -8,6 +8,7 @@
   white-space: nowrap;
   overflow: hidden;
   padding: @padding10 @padding10 @padding10 @padding20;
+  margin-left: @margin20!important;
   background: @ku-red;
   border-bottom: 1px solid lighten(@ku-red, 7%);
 
@@ -418,7 +419,10 @@
   padding: 0;
   margin: 0;
   font: inherit;
-  font-size: 14px;
+  font-size: @font-size-base;
+  @media screen and (min-width: @screen-sm) and (max-width: @screen-sm-max) {
+      font-size: @font-size-large;
+  }
   line-height: 20px;
 
   .mm-next {
@@ -1134,11 +1138,11 @@ html.mm-pagedim-black.mm-opening {
 
 	#mobileleftmenu > div > div > ul > ul > li > div > ul  li {
 		border-bottom: #BFBFBF !important;
-		margin-left: -20px;
+		//margin-left: -20px;
 	}
 
 	#mobileleftmenu > div > div > ul > ul > li > div > ul  li a {
-		padding-left: 40px;
+		//padding-left: 40px;
 	}
 
 
