removing additional menu stylings

--- a/less/ku-mobile-menu.less
+++ b/less/ku-mobile-menu.less
@@ -1117,35 +1117,35 @@ html.mm-pagedim-black.mm-opening {
 
 
 
-
-#mobileleftmenu a {
-	border-left: transparent;
-	border-right: transparent;
-}
-
-	#mobileleftmenu > div > div,
-	#mobileleftmenu > div > div > ul > ul > li > div {
-		padding-left: 0;
-		padding-top: 0;
-		padding-bottom: 0;
-	}
-
-	#mobileleftmenu > div > div > ul > ul > li,
-	#mobileleftmenu > div > div > ul > li {
-		padding-left: 20px;
-	}
-
-
-	#mobileleftmenu > div > div > ul > ul > li > div > ul  li {
-		border-bottom: #BFBFBF !important;
-		//margin-left: -20px;
-	}
-
-	#mobileleftmenu > div > div > ul > ul > li > div > ul  li a {
-		//padding-left: 40px;
-	}
-
-
-	#mobileleftmenu > div > div > ul > ul > li > div > ul  li:last-child {
-		border-bottom: none !important;
-	}
+//
+// #mobileleftmenu a {
+// 	border-left: transparent;
+// 	border-right: transparent;
+// }
+//
+// 	#mobileleftmenu > div > div,
+// 	#mobileleftmenu > div > div > ul > ul > li > div {
+// 		padding-left: 0;
+// 		padding-top: 0;
+// 		padding-bottom: 0;
+// 	}
+//
+// 	#mobileleftmenu > div > div > ul > ul > li,
+// 	#mobileleftmenu > div > div > ul > li {
+// 		padding-left: 20px;
+// 	}
+//
+//
+// 	#mobileleftmenu > div > div > ul > ul > li > div > ul  li {
+// 		border-bottom: #BFBFBF !important;
+// 		//margin-left: -20px;
+// 	}
+//
+// 	#mobileleftmenu > div > div > ul > ul > li > div > ul  li a {
+// 		//padding-left: 40px;
+// 	}
+//
+//
+// 	#mobileleftmenu > div > div > ul > ul > li > div > ul  li:last-child {
+// 		border-bottom: none !important;
+// 	}
