--- a/less/ku-gridboxes.less
+++ b/less/ku-gridboxes.less
@@ -1,4 +1,3 @@
-
 //
 // KU custom grid box styling
 // --------------------------------------------------
@@ -2177,7 +2176,8 @@
       overflow: hidden;
       transform-style: preserve-3d;
 
-      img, iframe {
+      iframe,
+      img {
         // media inside the box adjusted by height
         display: block;
         position: absolute;
@@ -2297,7 +2297,6 @@
     }
 
     .box2 {
-      max-height: 50%; // Image height
       order: 1;
       flex: 1;
       overflow-x: hidden;
@@ -3685,15 +3684,34 @@
   .gcrow .gccolumn .gridbox {
     &.size2,
     &.size3 {
-      &.with-img {
+      &.text-top {
+        .box1 {
+          order: 1;
+          position: relative;
+        }
+
+        .box2 {
+          order: 2;
+        }
+      }
+
+      &.with-img:not(.text-top) {
         flex-direction: column;
+
+        &.text-down {
+          .box1 {
+            position: absolute;
+            left: 0;
+            bottom: 0;
+          }
+        }
 
         .box1 {
           order: 2;
           flex: 0 1 auto;
-          position: absolute;
-          left: 0;
-          bottom: 0;
+          //   position: absolute;
+          //   left: 0;
+          //   bottom: 0;
           width: 100%;
 
           .header {
